Use local copy of JobStatus by mpi-operator
