# pkg/apis/kubeflow/v2beta1/types.go
@@ -26,8 +26,8 @@ import (
 type MPIJob struct {
 	metav1.TypeMeta   `json:",inline"`
 	metav1.ObjectMeta `json:"metadata,omitempty"`
-	Spec              MPIJobSpec       `json:"spec,omitempty"`
-	Status            common.JobStatus `json:"status,omitempty"`
+	Spec              MPIJobSpec `json:"spec,omitempty"`
+	Status            JobStatus  `json:"status,omitempty"`
 }
 
 // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
@@ -114,7 +114,7 @@ type MPIJobSpec struct {
 }
 
 // MPIReplicaType is the type for MPIReplica.
-type MPIReplicaType common.ReplicaType
+type MPIReplicaType string
 
 const (
 	// MPIReplicaTypeLauncher is the type for launcher replica.
@@ -129,4 +129,117 @@ type MPIImplementation string
 const (
 	MPIImplementationOpenMPI MPIImplementation = "OpenMPI"
 	MPIImplementationIntel   MPIImplementation = "Intel"
+)
+
+// JobStatus represents the current observed state of the training Job.
+type JobStatus struct {
+	// Conditions is an array of current observed job conditions.
+	// +options
+	Conditions []JobCondition `json:"conditions,omitempty"`
+
+	// ReplicaStatuses is map of ReplicaType and ReplicaStatus,
+	// specifies the status of each replica.
+	// +options
+	ReplicaStatuses map[MPIReplicaType]*ReplicaStatus `json:"replicaStatuses,omitempty"`
+
+	// Represents time when the job was acknowledged by the job controller.
+	// It is not guaranteed to be set in happens-before order across separate operations.
+	// It is represented in RFC3339 form and is in UTC.
+	// +options
+	StartTime *metav1.Time `json:"startTime,omitempty"`
+
+	// Represents time when the job was completed. It is not guaranteed to
+	// be set in happens-before order across separate operations.
+	// It is represented in RFC3339 form and is in UTC.
+	// +options
+	CompletionTime *metav1.Time `json:"completionTime,omitempty"`
+
+	// Represents last time when the job was reconciled. It is not guaranteed to
+	// be set in happens-before order across separate operations.
+	// It is represented in RFC3339 form and is in UTC.
+	// +options
+	LastReconcileTime *metav1.Time `json:"lastReconcileTime,omitempty"`
+}
+
+// ReplicaStatus represents the current observed state of the replica.
+type ReplicaStatus struct {
+	// The number of actively running pods.
+	// +options
+	Active int32 `json:"active,omitempty"`
+
+	// The number of pods which reached phase Succeeded.
+	// +options
+	Succeeded int32 `json:"succeeded,omitempty"`
+
+	// The number of pods which reached phase Failed.
+	// +options
+	Failed int32 `json:"failed,omitempty"`
+
+	// Deprecated: Use Selector instead
+	// +options
+	LabelSelector *metav1.LabelSelector `json:"labelSelector,omitempty"`
+
+	// A Selector is a label query over a set of resources. The result of matchLabels and
+	// matchExpressions are ANDed. An empty Selector matches all objects. A null
+	// Selector matches no objects.
+	// +options
+	Selector string `json:"selector,omitempty"`
+}
+
+// JobCondition describes the state of the job at a certain point.
+type JobCondition struct {
+	// Type of job condition.
+	// +options
+	Type JobConditionType `json:"type,omitempty"`
+
+	// Status of the condition, one of True, False, Unknown.
+	// +options
+	Status v1.ConditionStatus `json:"status,omitempty"`
+
+	// The reason for the condition's last transition.
+	// +options
+	Reason string `json:"reason,omitempty"`
+
+	// A human readable message indicating details about the transition.
+	// +options
+	Message string `json:"message,omitempty"`
+
+	// The last time this condition was updated.
+	// +options
+	LastUpdateTime metav1.Time `json:"lastUpdateTime,omitempty"`
+
+	// Last time the condition transitioned from one status to another.
+	// +options
+	LastTransitionTime metav1.Time `json:"lastTransitionTime,omitempty"`
+}
+
+// JobConditionType defines all kinds of types of JobStatus.
+type JobConditionType string
+
+const (
+	// JobCreated means the job has been accepted by the system,
+	// but one or more of the pods/services has not been started.
+	// This includes time before pods being scheduled and launched.
+	JobCreated JobConditionType = "Created"
+
+	// JobRunning means all sub-resources (e.g. services/pods) of this job
+	// have been successfully scheduled and launched.
+	// The training is running without error.
+	JobRunning JobConditionType = "Running"
+
+	// JobRestarting means one or more sub-resources (e.g. services/pods) of this job
+	// reached phase failed but maybe restarted according to it's restart policy
+	// which specified by user in v1.PodTemplateSpec.
+	// The training is freezing/pending.
+	JobRestarting JobConditionType = "Restarting"
+
+	// JobSucceeded means all sub-resources (e.g. services/pods) of this job
+	// reached phase have terminated in success.
+	// The training is complete without error.
+	JobSucceeded JobConditionType = "Succeeded"
+
+	// JobFailed means one or more sub-resources (e.g. services/pods) of this job
+	// reached phase failed with no restarting.
+	// The training has failed its execution.
+	JobFailed JobConditionType = "Failed"
 )
