# pkg/controller/mpi_job_controller_status.go
@@ -18,7 +18,6 @@ import (
 	v1 "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 
-	common "github.com/kubeflow/common/pkg/apis/common/v1"
 	kubeflow "github.com/kubeflow/mpi-operator/pkg/apis/kubeflow/v2beta1"
 )
 
@@ -37,23 +36,23 @@ const (
 
 // initializeMPIJobStatuses initializes the ReplicaStatuses for MPIJob.
 func initializeMPIJobStatuses(mpiJob *kubeflow.MPIJob, mtype kubeflow.MPIReplicaType) {
-	replicaType := common.ReplicaType(mtype)
+	replicaType := kubeflow.MPIReplicaType(mtype)
 	if mpiJob.Status.ReplicaStatuses == nil {
-		mpiJob.Status.ReplicaStatuses = make(map[common.ReplicaType]*common.ReplicaStatus)
+		mpiJob.Status.ReplicaStatuses = make(map[kubeflow.MPIReplicaType]*kubeflow.ReplicaStatus)
 	}
 
-	mpiJob.Status.ReplicaStatuses[replicaType] = &common.ReplicaStatus{}
+	mpiJob.Status.ReplicaStatuses[replicaType] = &kubeflow.ReplicaStatus{}
 }
 
 // updateMPIJobConditions updates the conditions of the given mpiJob.
-func updateMPIJobConditions(mpiJob *kubeflow.MPIJob, conditionType common.JobConditionType, reason, message string) {
+func updateMPIJobConditions(mpiJob *kubeflow.MPIJob, conditionType kubeflow.JobConditionType, reason, message string) {
 	condition := newCondition(conditionType, reason, message)
 	setCondition(&mpiJob.Status, condition)
 }
 
 // newCondition creates a new mpiJob condition.
-func newCondition(conditionType common.JobConditionType, reason, message string) common.JobCondition {
-	return common.JobCondition{
+func newCondition(conditionType kubeflow.JobConditionType, reason, message string) kubeflow.JobCondition {
+	return kubeflow.JobCondition{
 		Type:               conditionType,
 		Status:             v1.ConditionTrue,
 		LastUpdateTime:     metav1.Now(),
@@ -64,7 +63,7 @@ func newCondition(conditionType common.JobConditionType, reason, message string)
 }
 
 // getCondition returns the condition with the provided type.
-func getCondition(status common.JobStatus, condType common.JobConditionType) *common.JobCondition {
+func getCondition(status kubeflow.JobStatus, condType kubeflow.JobConditionType) *kubeflow.JobCondition {
 	for _, condition := range status.Conditions {
 		if condition.Type == condType {
 			return &condition
@@ -73,7 +72,7 @@ func getCondition(status common.JobStatus, condType common.JobConditionType) *co
 	return nil
 }
 
-func hasCondition(status common.JobStatus, condType common.JobConditionType) bool {
+func hasCondition(status kubeflow.JobStatus, condType kubeflow.JobConditionType) bool {
 	for _, condition := range status.Conditions {
 		if condition.Type == condType && condition.Status == v1.ConditionTrue {
 			return true
@@ -82,22 +81,22 @@ func hasCondition(status common.JobStatus, condType common.JobConditionType) boo
 	return false
 }
 
-func isFinished(status common.JobStatus) bool {
+func isFinished(status kubeflow.JobStatus) bool {
 	return isSucceeded(status) || isFailed(status)
 }
 
-func isSucceeded(status common.JobStatus) bool {
-	return hasCondition(status, common.JobSucceeded)
+func isSucceeded(status kubeflow.JobStatus) bool {
+	return hasCondition(status, kubeflow.JobSucceeded)
 }
 
-func isFailed(status common.JobStatus) bool {
-	return hasCondition(status, common.JobFailed)
+func isFailed(status kubeflow.JobStatus) bool {
+	return hasCondition(status, kubeflow.JobFailed)
 }
 
 // setCondition updates the mpiJob to include the provided condition.
 // If the condition that we are about to add already exists
 // and has the same status and reason then we are not going to update.
-func setCondition(status *common.JobStatus, condition common.JobCondition) {
+func setCondition(status *kubeflow.JobStatus, condition kubeflow.JobCondition) {
 
 	currentCond := getCondition(*status, condition.Type)
 
@@ -117,13 +116,13 @@ func setCondition(status *common.JobStatus, condition common.JobCondition) {
 }
 
 // filterOutCondition returns a new slice of mpiJob conditions without conditions with the provided type.
-func filterOutCondition(conditions []common.JobCondition, condType common.JobConditionType) []common.JobCondition {
-	var newConditions []common.JobCondition
+func filterOutCondition(conditions []kubeflow.JobCondition, condType kubeflow.JobConditionType) []kubeflow.JobCondition {
+	var newConditions []kubeflow.JobCondition
 	for _, c := range conditions {
-		if condType == common.JobRestarting && c.Type == common.JobRunning {
+		if condType == kubeflow.JobRestarting && c.Type == kubeflow.JobRunning {
 			continue
 		}
-		if condType == common.JobRunning && c.Type == common.JobRestarting {
+		if condType == kubeflow.JobRunning && c.Type == kubeflow.JobRestarting {
 			continue
 		}
 
@@ -132,7 +131,7 @@ func filterOutCondition(conditions []common.JobCondition, condType common.JobCon
 		}
 
 		// Set the running condition status to be false when current condition failed or succeeded
-		if (condType == common.JobFailed || condType == common.JobSucceeded) && (c.Type == common.JobRunning || c.Type == common.JobFailed) {
+		if (condType == kubeflow.JobFailed || condType == kubeflow.JobSucceeded) && (c.Type == kubeflow.JobRunning || c.Type == kubeflow.JobFailed) {
 			c.Status = v1.ConditionFalse
 		}
 
